fix(front): a11y : contraste input text désactivés

--- a/frontend/src/styles/_dark.scss
+++ b/frontend/src/styles/_dark.scss
@@ -168,8 +168,8 @@ body.dark-mode {
   .ant-select-disabled .ant-select-selector,
   textarea[disabled],
   .ant-picker-disabled .ant-picker-input input {
-    color: rgba(255, 255, 255, 0.4) !important;
-    -webkit-text-fill-color: rgba(255, 255, 255, 0.5) !important;
+    color: rgba(255, 255, 255, 0.55) !important;
+    -webkit-text-fill-color: rgba(255, 255, 255, 0.55) !important;
   }
 
   // Header / menu principal
